build/build.log
Handling lib "pwm"...
The --lib flag was not given for it, checking repository
Falling back to sources for "pwm" (failed to fetch prebuilt binary: got 404 status code when accessed https://github.com/mongoose-os-libs/pwm/releases/download/2.3/libpwm-esp32.a)
Prepared local dir: "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm"
Handling lib "mongoose"...
The --lib flag was not given for it, checking repository
Prebuilt binary for "mongoose" already exists
Prepared local dir: "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose"
The flag --repo is not given, going to use mongoose-os repository
Sources: [/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c]
Include dirs: [/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose/include /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm/include]
Binary libs: []
Building...
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222" to "/app"
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/modules/mongoose-os" to "/mongoose-os"
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/modules/mongoose-os" to "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/modules/mongoose-os"
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build" to "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build"
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src" to "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src"
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose/include" to "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose/include"
mount from "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm/include" to "/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm/include"
Docker arguments: run --name mos_build_2018-07-03T14-25-02-00_3048832926118221588 --rm -i -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222:/app -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/modules/mongoose-os:/mongoose-os -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/modules/mongoose-os:/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/modules/mongoose-os -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build:/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src:/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose/include:/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose/include -v /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm/include:/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm/include --user 0:0 docker.io/mgos/esp32-build:3.0-rc1-r9 /bin/bash -c nice make '-j' '16' '-C' '/app' '-f' '/mongoose-os/fw/platforms/esp32/Makefile.build' '/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/objs/moslib/libmoslib.a' 'APP=lib_mos' 'APP_BIN_LIBS=' 'APP_CFLAGS=-DMGOS_HAVE_MONGOOSE=1 -DMGOS_HAVE_PWM=1 -DMG_ENABLE_DNS=1 -DMG_ENABLE_DNS_SERVER=1 -DMG_ENABLE_MQTT=1 -DMG_ENABLE_SNTP=1' 'APP_CXXFLAGS=-DMGOS_HAVE_MONGOOSE=1 -DMGOS_HAVE_PWM=1 -DMG_ENABLE_DNS=1 -DMG_ENABLE_DNS_SERVER=1 -DMG_ENABLE_MQTT=1 -DMG_ENABLE_SNTP=1' 'APP_FS_FILES=' 'APP_INCLUDES=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/mongoose/include /fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/libs/pwm/include' 'APP_SOURCES=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c' 'APP_VERSION=1.0' 'BUILD_DIR=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/objs' 'ESP_IDF_EXTRA_COMPONENTS=' 'ESP_IDF_SDKCONFIG_OPTS=' 'FFI_SYMBOLS=' 'FS_STAGING_DIR=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/fs' 'FW_DIR=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/fw' 'GEN_DIR=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/gen' 'MANIFEST_FINAL=/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/gen/mos_final.yml' 'MGOS_HAVE_MONGOOSE=1' 'MGOS_HAVE_PWM=1' 'MGOS_PATH=/mongoose-os' 'PLATFORM=esp32' 'MGOS_MAIN_COMPONENT=moslib'
make: Entering directory '/app'
/mongoose-os/fw/platforms/esp32/Makefile.build:179: warning: overriding recipe for target 'defconfig'
/opt/Espressif/esp-idf/make/project_config.mk:75: warning: ignoring old recipe for target 'defconfig'
/mongoose-os/fw/platforms/esp32/Makefile.build:179: warning: overriding recipe for target 'menuconfig'
/opt/Espressif/esp-idf/make/project_config.mk:62: warning: ignoring old recipe for target 'menuconfig'
make[1]: Entering directory '/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/objs/moslib'
CC lib_mos.o
/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c: In function 'mgos_lib_mos_init':
/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c:27:26: error: storage size of 'led' isn't known
  struct mgos_pwm_rgb_led led;
                          ^
/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c:28:2: error: implicit declaration of function 'mgos_pwm_rgb_led_init' [-Werror=implicit-function-declaration]
  mgos_pwm_rgb_led_init(&led, 4, 16, 5);
  ^
/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c:29:2: error: implicit declaration of function 'mgos_pwm_rgb_led_set' [-Werror=implicit-function-declaration]
  mgos_pwm_rgb_led_set(&led, 255, 255, 255, 250); 
  ^
/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/src/lib_mos.c:27:26: warning: unused variable 'led' [-Wunused-variable]
  struct mgos_pwm_rgb_led led;
                          ^
cc1: all warnings being treated as errors
/mongoose-os/fw/platforms/esp32/src/esp32_src.mk:123: recipe for target 'lib_mos.o' failed
make[1]: Leaving directory '/fwbuild-volumes/2.3/apps/lib_mos/esp32/build_contexts/build_ctx_050890222/build/objs/moslib'
make[1]: *** [lib_mos.o] Error 1
/opt/Espressif/esp-idf/make/project.mk:466: recipe for target 'component-moslib-build' failed
make: Leaving directory '/app'
make: *** [component-moslib-build] Error 2
Error: exit status 2
